--- a/client/index.html
+++ b/client/index.html
@@ -9,12 +9,12 @@
     })(window,document,'script','dataLayer','GTM-TF5X4DPD');</script>
     <!-- End Google Tag Manager -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17744179036"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DW6JP8763W"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'AW-17744179036');
+      gtag('config', 'G-DW6JP8763W');
     </script>
     <meta charset="UTF-8" />
     <meta
